--- a/resources/ts/plugins/i18n/locales/en.json
+++ b/resources/ts/plugins/i18n/locales/en.json
@@ -157,6 +157,12 @@
   "Logistics": "Logistics",
   "Dashboard": "Dashboard",
   "Fleet": "Fleet",
+  "Sistema NDD": "Sistema NDD",
+  "Dashboard NDD": "Dashboard NDD",
+  "Transportadores": "Transportadores",
+  "Pacotes": "Pacotes",
+  "Vale Pedágio": "Vale Pedágio",
+  "Rotas SemParar": "Rotas SemParar",
   "5": "5",
   "10": "10",
   "20": "20",
