Update: Pagina de login e traducoes
- Melhorar tratamento de erros na pagina de login
- Adicionar suporte a remember me
- Adicionar traducoes pt-BR para novos campos
- Adicionar imagem de background para login

--- a/resources/ts/plugins/i18n/locales/pt-BR.json
+++ b/resources/ts/plugins/i18n/locales/pt-BR.json
@@ -166,6 +166,10 @@
   "Rotas Padrão": "Rotas Padrão",
   "Compra Viagem": "Compra Viagem",
   "Rotas SemParar": "Rotas SemParar",
+  "Usuários": "Usuários",
+  "Perfis e Permissões": "Perfis e Permissões",
+  "Emissão VPO NDD": "Emissão VPO NDD",
+  "Emissão VPO SemParar": "Emissão VPO SemParar",
   "5": "5",
   "10": "10",
   "20": "20",
